<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ICTDroid</string>
    <string name="core_service_name">ICTDroid Core Service</string>
    <string name="plugin_collection_service_name">ICTDroid Plugin Collection Service</string>
    
    
    <!-- Plugins -->
    <string name="noPlugins">You have not installed any plugins yet.</string>
    <string name="noModules">No available modules found.</string>
    <string name="plugins_count">%1$s plugin%2$s found.</string>
    <string name="created_by">Created by %1$s.</string>
    <string name="refresh">Refresh</string>
    
    <!-- PluginDetails -->
    <string name="methods_defined">Methods defined for this plugin</string>
    <string name="runAllModules">Run all modules</string>
    <string name="showModules">Show %1$s module(s)</string>
    <string name="showPlugins">Show %1$s plugin(s)</string>
    <string name="setQuotas">Set quotas</string>
    <string name="placeholder">PLACEHOLDER</string>
    <string name="enabled">Enabled</string>
    <string name="run">Run</string>
    <string name="load">Load</string>
    <string name="loaded">Loaded</string>
    <string name="uploadManual">Manual Upload</string>
    <string name="storageButtonLabel">Manage local storage</string>
    <string name="statisticsButtonLabel">Statistics</string>
    <string name="manageLogsButtonLabel">Manage logs</string>
    
    <!-- Google Cloud Messaging -->
    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    
    <string name="remove">Remove</string>
    <string name="pluginTitle">Plugin title</string>
    <string name="pluginDescription">Plugin description</string>
    <string name="pluginAuthor">Plugin author</string>
    <string name="installPlugin">Install plugin</string>
    <string name="defaultDate">2013&#8211;11&#8211;19</string>
    <string name="defaultShortTime">11&#8211;19 12:10:11</string>
    <string name="defaultNumber">42</string>
    <string name="placeholderModuleName">Sample module</string>
    <string name="placeholderModuleState">Installed</string>
    <string name="moduleStartedString">Started on %1$s</string>
    <string name="moduleEndedString">Finished on %1$s</string>
    <string name="moduleAuthorString">By %1$s</string>
    <string name="moduleIdString">#%1$s</string>
    
    <string name="placeholderModuleDescription">This is a great module, you should definitely install it! Thank you for your help!</string>
    <string name="placeholderWebsite">http://tmit.bme.hu</string>
    <string name="placeholderPlugins">WiFi, Battery, Bluetooth</string>
    <string name="placeholderPermissions">WiFi.NETWORK_STATE, WiFi.INTERNET, Battery.READ, Battery.ALERT, Bluetooth.SCAN</string>
    <string name="placeholderQuotas">Download: 10kByte/day, Upload 10kByte/day</string>
    <string name="requiredPlugins">Required Plugins</string>
    <string name="requiredPermissions">Required Permissions</string>
    <string name="requiredQuotas">Required Quotas</string>
    <string name="startModule">Start module</string>
    <string name="deleteModule">Delete module</string>
    <string name="deleteLogs">Delete logs</string>
    <string name="placeholderDataVolume">Calculating used space&#8230;</string>
    <string name="dataStoreTotalLogSize">Total size of log files: %1$.2f MB</string>
    <string name="dataStoreTotalZipSize">Total size of zips files: %1$.2f MB</string>
    <string name="dataStoreModuleCount"> %1$d module(s) stored on the system.</string>
    
    <string name="serviceUnavailable">Service not initialized yet.</string>
    <string name="loggingInTitle">Logging in to your account</string>
    <string name="loginSuccess">Logged in successfully</string>
    <string name="loginFailed">Login failed</string>
    <string name="registrationSuccess">User has been registered successfully</string>
    <string name="registrationFailed">User registration failed</string>
    
    <string name="moduleStateAvailable">Available</string>
    <string name="moduleStateInstalled">Installed</string>
    <string name="moduleStateTerminated">Terminated</string>
    <string name="moduleStateBanned">Banned</string>
    <string name="deleteZips">Delete temporary files</string>
    <string name="deleteModules">Delete modules</string>
    <string name="loginOrRegister">Login or Register</string>
    <string name="passwordHint">Password</string>
    <string name="userNameHint">Username</string>
    <string name="loginText">Login</string>
    <string name="registerText">Register</string>
    <string name="passwordsDontMatch">Passwords don\'t match!</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="welcome">Welcome to DroidLab!</string>
    <string name="loginTitle">Log in to DroidLab!</string>
    <string name="registerTitle">Register to DroidLab!</string>
    <string name="restartModule">Restart Module</string>
    
    <string name="logDetialsOverviewLogDatabaseSizeText">%1$d log(s) stored on the system.</string>
    <string name="logDetialsOverviewWipeDatabaseText">Wipe database</string>
    <string name="logDetialsOverviewLastUpdateDateText">Last successful log upload: %s</string>
    <string name="logDetialsOverviewUpdateModeText">Upload mode:</string>
    <string name="logDetialsOverviewUploadNowText">Upload now</string>
    <string-array
        name="logDetialsOverviewUpdateModes">
        <item>Instant uploading</item>
        <item>Batch uploading</item>
    </string-array>
    <string name="listItemDelete">Delete</string>    
    
</resources>