<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PluginListActivity" >

    <TextView
        android:id="@+id/moduleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholderModuleName"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/moduleAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moduleAuthorString" />

    <TextView
        android:id="@+id/moduleDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholderModuleDescription" />

    <TextView
        android:id="@+id/moduleWebsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/placeholderWebsite" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requiredPlugins"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requiredPermissions"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requiredQuotas"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
</LinearLayout>