<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PluginListActivity" >

    <Button
        android:id="@+id/showPlugins"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showPlugins" />
    
    <Button
        android:id="@+id/showModules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showModules" />

    <Button
        android:id="@+id/statsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/statisticsButtonLabel" />

    <Button
        android:id="@+id/manageLocalStorageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/storageButtonLabel" />

    <TextView
        android:id="@+id/messageField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder" />

</LinearLayout>