<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/moduleNameLable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/placeholder" />

    <Button
        android:id="@+id/loadModuleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load" />

    <TextView
        android:id="@+id/loadedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loaded" />

    <Button
        android:id="@+id/removeModule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove" />

</LinearLayout>
