<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/logDetialsOverviewLogDatabaseSizeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
        android:layout_marginStart="3dp"
        android:text="@string/logDetialsOverviewLogDatabaseSizeText" />

    <TextView
        android:id="@+id/logDetialsOverviewLastUpdateDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
        android:layout_marginStart="3dp"
        android:text="@string/logDetialsOverviewLastUpdateDateText" />

    <Button
        android:id="@+id/logDetialsOverviewWipeDatabaseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logDetialsOverviewWipeDatabaseText" />

    <ListView
        android:id="@+id/logDetialsOverviewFileListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/lightgrey"
        android:textAppearance="@android:style/TextAppearance.Medium" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="3dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/logDetialsOverviewUpdateModeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/logDetialsOverviewUpdateModeText" />

        <Spinner
            android:id="@+id/logDetialsOverviewUpdateModeSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/logDetialsOverviewUploadNowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/logDetialsOverviewUploadNowText" />

    <Button
        android:id="@+id/logDetialsOverviewRefreshButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/refresh" />

</LinearLayout>