<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <TextView
        android:id="@+id/title"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:drawableRight="@drawable/ic_launcher"
        android:gravity="center_vertical|right"
        android:text="@string/registerTitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/password"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/userNameHint">

        <requestFocus />
    </EditText>
    
    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_alignRight="@+id/username"
        android:layout_above="@+id/confirmPassword"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword" >
    </EditText>

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_alignRight="@+id/password"
        android:layout_above="@+id/passwordDontMatch"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/confirmRegistrationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/confirmPassword"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/registerText" />

    <TextView
        android:id="@+id/passwordDontMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/confirmPassword"
        android:layout_above="@+id/confirmRegistrationButton"
        android:layout_marginTop="10dp"
        android:text="@string/passwordsDontMatch"
        android:textColor="@color/red"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
