<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/plugin_list_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingTop="4dip"
    android:paddingBottom="4dip" >

    <View
        android:layout_width="2dip"
        android:layout_height="fill_parent"
        android:background="#FFFF3636" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="4dip" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/plugin_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pluginTitle"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <Button
                android:id="@+id/installPluginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/installPlugin" />

        </LinearLayout>

        <TextView
            android:id="@+id/plugin_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dip"
            android:text="@string/pluginAuthor"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/plugin_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dip"
            android:layout_marginTop="6dip"
            android:text="@string/pluginDescription"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

</LinearLayout>